todo-app/todo-app-frontend/manifests/lb.yaml
apiVersion: v1
kind: Service
metadata: 
  name: todo-frontend
  namespace: todo-app
spec:
  type: LoadBalancer 
  loadBalancerIP: 35.228.105.181
  selector:
    app: todo-frontend
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 80
