todo-app/todo-app-frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: todo-svc
  namespace: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-frontend
  ports:
    - name: http
      protocol: TCP
      port: 8888
      targetPort: 80
